2008-09-25  Glenn Morris  <rgm@gnu.org>

	* ffap.el (ffap-fixup-url): Don't call url-normalize-url.  (Bug#898)

2008-09-25  Chong Yidong  <cyd@stupidchicken.com>

	* vc.el (vc-mark-resolved): Move message here from
	vc-default-mark-resolved.
	(vc-default-mark-resolved): Change to an alias for ignore.

2008-09-24  Andreas Politz  <politza@fh-trier.de>  (tiny change)

	* term.el (term-emulate-terminal): Encode input string before
	checking its length.

2008-09-24  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/sh-script.el (sh-mode-map): Don't assume that skeleton
	is loaded.

	* server.el (server-buffer-done): Avoid changing the buffer when
	deleting the client's frame (bug#640).

	* vc.el (vc-default-mark-resolved): New function.

2008-09-24  Stephen Berman  <stephen.berman@gmx.net>

	* mail/rfc822.el (rfc822-addresses): Prevent rfc822-bad-address
	from raising a wrong-type-argument error.

2008-09-24  Martin Rudalics  <rudalics@gmx.at>

	* help-fns.el (describe-function-1, describe-variable): Print
	relative file name in help buffer.
	* faces.el (describe-face): Print relative file name in help
	buffer.

2008-09-23  Romain Francoise  <romain@orebokech.com>

	* subr.el (with-output-to-string): Make sure that the temporary
	buffer gets killed.

2008-09-23  Markus Sauermann <markus@sauermann-consulting.de>  (tiny change)

	* emacs-lisp/emacslisp-mode.el (calculate-lisp-indent): Fix
	indentation problem with keyword symbols when a list starts with
	,@ or spaces.  (Bug#1012)

2008-09-23  Martin Rudalics  <rudalics@gmx.at>

	* textmodes/tex-mode.el (latex-find-indent): Try to handle
	escaped close parens correctly.  (Bug#954)

2008-09-22  Tassilo Horn  <tassilo@member.fsf.org>

	* play/fortune.el (fortune-in-buffer): Fix a bug which forced
	usage of `fortune-file' even though a FILE argument was passed to
	the function.

2008-09-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* startup.el (command-line): Start the server when in daemon mode.
	Remove always true test.
